feat: Enhance error handling and logging in price checking and email services